base/012-profile/fuse-012-profile-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: profile
  name: profile
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: profile
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: profile
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-profile:development"
          name: profile
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
            - name: grpc-port
              containerPort: 10000
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
